# Operating-Systems

./: README.md
Project 1 - Basic Forking and Piping/: CMakeLists.txt  README.txt  linkedList.c  linkedList.h  pipe.c  pre.c  pre.h
Project 2 - Shell Terminal Creation and Advanced Piping/: CMakeLists.txt  README.txt  parent.c  shhh.c  sort.c  vector.c  vector.h
Project 3 - Threading With and Without Mutual Exclusion/: CMakeLists.txt  README.txt  mutualExclusion.c  pipe.c  pipe.h  shhh.c  threads.c
Project 4 - LRU and Optimal Page Replacement Algorithms/: CompareProcesses.py  README.txt
